--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -3,11 +3,48 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:MorseCode"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Width="800"
+        WindowStartupLocation="CenterScreen"
+        Height="450"
+        Title="Morse Code"
+        Loaded="Window_Loaded">
+    
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="253,80,0,0" VerticalAlignment="Top" Width="75" Click="Button_Click"/>
+
+        <Grid.RowDefinitions>
+            <RowDefinition />
+            <RowDefinition Height="60" />
+        </Grid.RowDefinitions>
+
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+
+        <TextBox
+            Name="textBox"
+            Grid.Row="0"
+            Grid.ColumnSpan="2"
+            Padding="4"
+            TextWrapping="Wrap"
+            AcceptsReturn="True"
+            VerticalScrollBarVisibility="Visible"
+            FontSize="14"
+            FontWeight="Bold" />
+
+        <Button
+            Grid.Row="1"
+            Grid.Column="0"
+            Content="Naar morsecode"
+            Click="ToMorse" />
+
+        <Button
+            Grid.Row="1"
+            Grid.Column="1"
+            Content="Van morsecode"
+            Click="FromMorse" />
 
     </Grid>
+    
 </Window>
