--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -42,7 +42,7 @@
         <Button
             Grid.Row="1"
             Grid.Column="1"
-            Content="Van morsecode"
+            Content="Naar tekst"
             Click="FromMorse" />
 
     </Grid>
